fix color of dark mode in nav

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -58,9 +58,6 @@ li {
 .dark-mode a {
   color: var(--pallette-six);
 }
-.dark-mode li {
-  color: var(--pallette-six);
-}
 .dark-mode img {
   filter: grayscale(100%);
 }
